src/styles/App.css
* {
  /* box-sizing: border-box;
  margin: 0;
  padding: 0; */
}

html {
  scroll-behavior: smooth;
}

body {
  font-size: 16px;
  font-family: "Open Sans", sans-serif;
  color: #fff;
  background-color: #000;
  justify-content: center;
  place-items: center;
  font-family: "Open Sans", sans-serif;
  margin: 0;
  padding: 0;
  overflow: auto;
  overflow-x: hidden;
  touch-action: auto;
}

img {
  max-width: 100%;
  display: block;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  cursor: pointer;
}

ul {
  list-style: none;
}

input,
textarea,
select {
  background-color: black;
}

.App {
  height: 100vh;
  width: 100vw;
}

